# sourcecrumb

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.json
.claude/hooks/: ruff-fix.sh
.claude/rules/: python.md
repoguide/: cli.py  discovery.py  graph.py  languages.py  models.py  parsing.py  ranking.py  toon.py
sourcecrumb/: __init__.py  cli.py  discovery.py  graph.py  languages.py  models.py  parallel.py  parsing.py  ranking.py  toon.py
sourcecrumb/queries/: __init__.py  python.scm
tests/: conftest.py  test_cli.py  test_discovery.py  test_graph.py  test_languages.py  test_parallel.py  test_parsing.py  test_ranking.py  test_toon.py
