[project]
name = "sourcecrumb"
version = "0.2.2"
description = "Tree-sitter repository map in TOON format for LLM consumption"
readme = "README.md"
license = "MIT"
authors = [{ name = "Michael Barrett", email = "loki77@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.6.0",
    "networkx>=3.2",
    "pathspec>=0.12.0",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[project.scripts]
sourcecrumb = "sourcecrumb.cli:app"

[project.urls]
Homepage = "https://github.com/phobologic/sourcecrumb"
Repository = "https://github.com/phobologic/sourcecrumb"
Issues = "https://github.com/phobologic/sourcecrumb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["sourcecrumb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
